--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,5 @@
 spring:
-  datasource:
-    generate-unique-name: false
-    name: tacocloud
-  jpa:
-    open-in-view: false
+    cassandra:
+      local-datacenter: datacenter1
+      keyspace-name: tacocloud
+      schema-action: recreate
